syntax = "proto3";

package pb;

import "google/api/annotations.proto";
import "rpc_register_trader.proto";
import "rpc_login_trader.proto";
import "rpc_logout_trader.proto";
import "rpc_update_trader.proto";
import "rpc_verify_email.proto";
import "rpc_get_traders.proto";
import "rpc_forgot_password.proto";
import "rpc_reset.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

option go_package = "peerbill-trader-api/pb";

option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
    info: {
      title: "Peerbill"
      version: "1.2"
      contact: {
        name: "Peerbill"
        url: ""
        email: "peerbillofficial@gmail.com"
      }
    }
};

service PeerbillTrader {
    rpc RegisterTrader (RegisterTraderRequest) returns (RegisterTraderResponse) {
        option (google.api.http) = {
            post: "/api/register-trader"
            body: "*"
        };
        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
            description: "Use this API to create a new trader";
            summary: "create a new trader";
        };
    }
    rpc LoginTrader (LoginTraderRequest) returns (LoginTraderResponse) {
        option (google.api.http) = {
            post: "/api/login-trader"
            body: "*"
        };
        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
            description: "Use this API to login trader";
            summary: "login trader";
        };
    }
    rpc LogoutTrader (LogoutRequest) returns (LogoutResponse) {
        option (google.api.http) = {
            post: "/api/logout-trader"
            body: "*"
        };
        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
            description: "Use this API to logout trader";
            summary: "logout trader";
        };
    }
    rpc UpdateTrader (UpdateTraderRequest) returns (UpdateTraderResponse) {
        option (google.api.http) = {
            patch: "/api/update-trader"
            body: "*"
        };
        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
            description: "Use this API to update a trader";
            summary: "update a trader";
        };
    }
    rpc VerifyEmail (VerifyEmailRequest) returns (VerifyEmailResponse) {
        option (google.api.http) = {
            post: "/api/verify"
            body: "*"
        };
        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
            description: "Use this API to verify email address";
            summary: "verify email address";
        };
    }
    rpc Forgot (ForgotPasswordRequest) returns (ForgotPasswordResponse) {
        option (google.api.http) = {
            post: "/api/forgot"
            body: "*"
        };
        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
            description: "Use this API to send password reset link";
            summary: "Send password reset link";
        };
    }
    rpc Reset (ResetPasswordRequest) returns (ResetPasswordResponse) {
        option (google.api.http) = {
            post: "/api/reset"
            body: "*"
        };
        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
            description: "Use this API to reset password";
            summary: "Password reset link";
        };
    }
    rpc GetTraders (GetTradersRequest) returns (GetTradersResponse) {
        option (google.api.http) = {
            post: "/api/get-traders"
            body: "*"
        };
        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
            description: "Use this API to get list of traders";
            summary: "Get a list of traders";
        };
    }
}